mostly updates for section 15

--- a/Section-15-Date-Time-Features/01-pandas/01-Extracting-date-related-features.ipynb
+++ b/Section-15-Date-Time-Features/01-pandas/01-Extracting-date-related-features.ipynb
@@ -76,6 +76,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset Information  \n",
+    "\n",
+    "source: [UC Irvine Machine Learning Repository: Online Retail II](https://archive.ics.uci.edu/dataset/502/online+retail+ii)  \n",
+    "\n",
+    "**Dataset Characteristics**  \n",
+    "Multivariate, Sequential, Time-Series, Text  \n",
+    "\n",
+    "**Subject Area**  \n",
+    "Busines  \n",
+    "\n",
+    "**Associated Tasks**  \n",
+    "Classification, Regression, Clustering  \n",
+    "\n",
+    "**Feature Type**  \n",
+    "Integer, Real  \n",
+    "\n",
+    "**# Instances**\n",
+    "1,067,371 \n",
+    "\n",
+    "**# Features** \n",
+    "--\n",
+    "\n",
+    "**Additional Information**\n",
+    "This Online Retail II data set contains all the transactions occurring for a UK-based and registered, non-store online retail between 01/12/2009 and 09/12/2011.  The company mainly sells unique all-occasion gift-ware. Many customers of the company are wholesalers.\n",
+    "\n",
+    "**Has Missing Values?** \n",
+    "Yes "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -203,16 +236,20 @@
     "# File path:\n",
     "file = \"../../Datasets/online_retail_II.xlsx\"\n",
     "\n",
+    "\n",
     "# The data is provided as two sheets in a single Excel file.\n",
     "# Each sheet contains a different time period.\n",
     "# Load both and join them into a single dataframe\n",
     "# as shown below:\n",
     "\n",
-    "df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
-    "df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
+    "# df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
+    "# df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
     "\n",
-    "data = pd.concat([df_1, df_2])\n",
+    "# data = pd.concat([df_1, df_2])\n",
     "\n",
+    "# data.to_pickle('../../Datasets/online_retail_II.pkl')\n",
+    "\n",
+    "data = pd.read_pickle(\"../../Datasets/online_retail_II.pkl\")\n",
     "print(data.shape)\n",
     "\n",
     "data.head()"
@@ -236,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +282,7 @@
        "dtype('<M8[ns]')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +371,7 @@
        "4 2009-12-01 07:45:00 2009-12-01 07:45:00"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +397,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +435,7 @@
        "Name: date_part, dtype: object"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +464,7 @@
        "Name: date, dtype: object"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -522,7 +559,7 @@
        "4          2009 2009-12-01 07:45:00"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +583,7 @@
        "array([2009, 2010, 2011])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +605,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -641,7 +678,7 @@
        "4               False             False 2009-12-01 07:45:00"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -666,7 +703,7 @@
        "array([False])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +723,7 @@
        "array([False])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -699,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No sales over the first and last day of the year. Makes sense, those are bank holidays in many countries, including the UK, were most of the sales were done in this dataset.\n",
+    "No sales over the first and last day of the year. Makes sense, those are bank holidays in many countries, including the UK, where most of the sales were done in this dataset.\n",
     "\n",
     "### Leap year\n",
     "\n",
@@ -819,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -886,7 +923,7 @@
        "4 2009-12-01 07:45:00                4"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -901,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +947,7 @@
        "array([4, 1, 2, 3])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1001,7 +1038,7 @@
        "4                  False                False 2009-12-01 07:45:00"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1026,7 +1063,7 @@
        "array([False,  True])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1074,7 +1111,6 @@
        "      <th>invoice_year</th>\n",
        "      <th>invoice_year_start</th>\n",
        "      <th>invoice_year_end</th>\n",
-       "      <th>invoice_year_leap</th>\n",
        "      <th>invoice_quarter</th>\n",
        "      <th>invoice_quarter_start</th>\n",
        "      <th>invoice_quarter_end</th>\n",
@@ -1096,7 +1132,6 @@
        "      <td>2010</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -1114,7 +1149,6 @@
        "      <td>2010-04-01 07:49:00</td>\n",
        "      <td>2010-04-01</td>\n",
        "      <td>2010</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
@@ -1136,7 +1170,6 @@
        "      <td>2010</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -1156,7 +1189,6 @@
        "      <td>2010</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>False</td>\n",
        "      <td>2</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -1174,7 +1206,6 @@
        "      <td>2010-04-01 07:49:00</td>\n",
        "      <td>2010-04-01</td>\n",
        "      <td>2010</td>\n",
-       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>2</td>\n",
@@ -1207,22 +1238,22 @@
        "147685 2010-04-01 07:49:00  2010-04-01          2010               False   \n",
        "147686 2010-04-01 07:49:00  2010-04-01          2010               False   \n",
        "\n",
-       "        invoice_year_end  invoice_year_leap  invoice_quarter  \\\n",
-       "147682             False              False                2   \n",
-       "147683             False              False                2   \n",
-       "147684             False              False                2   \n",
-       "147685             False              False                2   \n",
-       "147686             False              False                2   \n",
+       "        invoice_year_end  invoice_quarter  invoice_quarter_start  \\\n",
+       "147682             False                2                   True   \n",
+       "147683             False                2                   True   \n",
+       "147684             False                2                   True   \n",
+       "147685             False                2                   True   \n",
+       "147686             False                2                   True   \n",
        "\n",
-       "        invoice_quarter_start  invoice_quarter_end  \n",
-       "147682                   True                False  \n",
-       "147683                   True                False  \n",
-       "147684                   True                False  \n",
-       "147685                   True                False  \n",
-       "147686                   True                False  "
+       "        invoice_quarter_end  \n",
+       "147682                False  \n",
+       "147683                False  \n",
+       "147684                False  \n",
+       "147685                False  \n",
+       "147686                False  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1245,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1312,7 +1343,7 @@
        "4                 2                4"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1327,7 +1358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1336,7 +1367,7 @@
        "array([2, 1])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2262,9 +2293,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "ml2023",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2276,7 +2307,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
