--- a/Section-15-Date-Time-Features/01-pandas/02-Extracting-time-related-features.ipynb
+++ b/Section-15-Date-Time-Features/01-pandas/02-Extracting-time-related-features.ipynb
@@ -188,10 +188,12 @@
     "# Load both and join them into a single dataframe\n",
     "# as shown below:\n",
     "\n",
-    "df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
-    "df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
+    "# df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
+    "# df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
     "\n",
-    "data = pd.concat([df_1, df_2])\n",
+    "# data = pd.concat([df_1, df_2])\n",
+    "\n",
+    "data = pd.read_pickle(\"../../Datasets/online_retail_II.pkl\")\n",
     "\n",
     "print(data.shape)\n",
     "\n",
@@ -273,27 +275,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
+       "      <td>2009-12-01 07:45:00+00:00</td>\n",
        "      <td>2009-12-01 07:45:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
+       "      <td>2009-12-01 07:45:00+00:00</td>\n",
        "      <td>2009-12-01 07:45:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
+       "      <td>2009-12-01 07:45:00+00:00</td>\n",
        "      <td>2009-12-01 07:45:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
+       "      <td>2009-12-01 07:45:00+00:00</td>\n",
        "      <td>2009-12-01 07:45:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2009-12-01 07:45:00</td>\n",
+       "      <td>2009-12-01 07:45:00+00:00</td>\n",
        "      <td>2009-12-01 07:45:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -301,12 +303,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                 date         InvoiceDate\n",
-       "0 2009-12-01 07:45:00 2009-12-01 07:45:00\n",
-       "1 2009-12-01 07:45:00 2009-12-01 07:45:00\n",
-       "2 2009-12-01 07:45:00 2009-12-01 07:45:00\n",
-       "3 2009-12-01 07:45:00 2009-12-01 07:45:00\n",
-       "4 2009-12-01 07:45:00 2009-12-01 07:45:00"
+       "                       date         InvoiceDate\n",
+       "0 2009-12-01 07:45:00+00:00 2009-12-01 07:45:00\n",
+       "1 2009-12-01 07:45:00+00:00 2009-12-01 07:45:00\n",
+       "2 2009-12-01 07:45:00+00:00 2009-12-01 07:45:00\n",
+       "3 2009-12-01 07:45:00+00:00 2009-12-01 07:45:00\n",
+       "4 2009-12-01 07:45:00+00:00 2009-12-01 07:45:00"
       ]
      },
      "execution_count": 4,
@@ -317,7 +319,7 @@
    "source": [
     "# This is how we parse date strings into datetime format.\n",
     "\n",
-    "data[\"date\"] = pd.to_datetime(data[\"InvoiceDate\"])\n",
+    "data[\"date\"] = pd.to_datetime(data[\"InvoiceDate\"], utc=True)\n",
     "\n",
     "data[[\"date\", \"InvoiceDate\"]].head()"
    ]
@@ -982,9 +984,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "ml2023",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -996,7 +998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
