--- a/Section-15-Date-Time-Features/02-feature-engine/01-datetime-with-Feature-engine.ipynb
+++ b/Section-15-Date-Time-Features/02-feature-engine/01-datetime-with-Feature-engine.ipynb
@@ -179,10 +179,11 @@
     "# Load both and join them into a single dataframe\n",
     "# as shown below:\n",
     "\n",
-    "df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
-    "df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
+    "# df_1 = pd.read_excel(file, sheet_name=\"Year 2009-2010\")\n",
+    "# df_2 = pd.read_excel(file, sheet_name=\"Year 2010-2011\")\n",
     "\n",
-    "data = pd.concat([df_1, df_2])\n",
+    "# data = pd.concat([df_1, df_2])\n",
+    "data = pd.read_pickle(\"../../Datasets/online_retail_II.pkl\")\n",
     "\n",
     "print(data.shape)\n",
     "\n",
@@ -241,6 +242,260 @@
     "    variables=None,  # it identifies the datetime variable automatically.\n",
     "    features_to_extract=\"all\",\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Invoice</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Price</th>\n",
+       "      <th>Customer ID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>InvoiceDate_month</th>\n",
+       "      <th>InvoiceDate_quarter</th>\n",
+       "      <th>InvoiceDate_semester</th>\n",
+       "      <th>...</th>\n",
+       "      <th>InvoiceDate_month_end</th>\n",
+       "      <th>InvoiceDate_quarter_start</th>\n",
+       "      <th>InvoiceDate_quarter_end</th>\n",
+       "      <th>InvoiceDate_year_start</th>\n",
+       "      <th>InvoiceDate_year_end</th>\n",
+       "      <th>InvoiceDate_leap_year</th>\n",
+       "      <th>InvoiceDate_days_in_month</th>\n",
+       "      <th>InvoiceDate_hour</th>\n",
+       "      <th>InvoiceDate_minute</th>\n",
+       "      <th>InvoiceDate_second</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>489434</td>\n",
+       "      <td>85048</td>\n",
+       "      <td>15CM CHRISTMAS GLASS BALL 20 LIGHTS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6.95</td>\n",
+       "      <td>13085.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>489434</td>\n",
+       "      <td>79323P</td>\n",
+       "      <td>PINK CHERRY LIGHTS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>13085.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>489434</td>\n",
+       "      <td>79323W</td>\n",
+       "      <td>WHITE CHERRY LIGHTS</td>\n",
+       "      <td>12</td>\n",
+       "      <td>6.75</td>\n",
+       "      <td>13085.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>489434</td>\n",
+       "      <td>22041</td>\n",
+       "      <td>RECORD FRAME 7\" SINGLE SIZE</td>\n",
+       "      <td>48</td>\n",
+       "      <td>2.10</td>\n",
+       "      <td>13085.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>489434</td>\n",
+       "      <td>21232</td>\n",
+       "      <td>STRAWBERRY CERAMIC TRINKET BOX</td>\n",
+       "      <td>24</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>13085.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>12</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>31</td>\n",
+       "      <td>7</td>\n",
+       "      <td>45</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 27 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Invoice StockCode                          Description  Quantity  Price  \\\n",
+       "0  489434     85048  15CM CHRISTMAS GLASS BALL 20 LIGHTS        12   6.95   \n",
+       "1  489434    79323P                   PINK CHERRY LIGHTS        12   6.75   \n",
+       "2  489434    79323W                  WHITE CHERRY LIGHTS        12   6.75   \n",
+       "3  489434     22041         RECORD FRAME 7\" SINGLE SIZE         48   2.10   \n",
+       "4  489434     21232       STRAWBERRY CERAMIC TRINKET BOX        24   1.25   \n",
+       "\n",
+       "   Customer ID         Country  InvoiceDate_month  InvoiceDate_quarter  \\\n",
+       "0      13085.0  United Kingdom                 12                    4   \n",
+       "1      13085.0  United Kingdom                 12                    4   \n",
+       "2      13085.0  United Kingdom                 12                    4   \n",
+       "3      13085.0  United Kingdom                 12                    4   \n",
+       "4      13085.0  United Kingdom                 12                    4   \n",
+       "\n",
+       "   InvoiceDate_semester  ...  InvoiceDate_month_end  \\\n",
+       "0                     2  ...                      0   \n",
+       "1                     2  ...                      0   \n",
+       "2                     2  ...                      0   \n",
+       "3                     2  ...                      0   \n",
+       "4                     2  ...                      0   \n",
+       "\n",
+       "   InvoiceDate_quarter_start  InvoiceDate_quarter_end  InvoiceDate_year_start  \\\n",
+       "0                          0                        0                       0   \n",
+       "1                          0                        0                       0   \n",
+       "2                          0                        0                       0   \n",
+       "3                          0                        0                       0   \n",
+       "4                          0                        0                       0   \n",
+       "\n",
+       "   InvoiceDate_year_end  InvoiceDate_leap_year  InvoiceDate_days_in_month  \\\n",
+       "0                     0                      0                         31   \n",
+       "1                     0                      0                         31   \n",
+       "2                     0                      0                         31   \n",
+       "3                     0                      0                         31   \n",
+       "4                     0                      0                         31   \n",
+       "\n",
+       "   InvoiceDate_hour  InvoiceDate_minute  InvoiceDate_second  \n",
+       "0                 7                  45                   0  \n",
+       "1                 7                  45                   0  \n",
+       "2                 7                  45                   0  \n",
+       "3                 7                  45                   0  \n",
+       "4                 7                  45                   0  \n",
+       "\n",
+       "[5 rows x 27 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dft = dtfs.fit_transform(data)\n",
+    "dft.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['omd_1', 'omd_2', 'omd_3', 'komd', 'mjdomdjfdhcd']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# omd\n",
+    "\n",
+    "l = ['omd_1', 'omd_2', 'omd_3', 'mjd', 'jfd', 'hcd', 'komd', 'mjdomdjfdhcd']\n",
+    "[i for i in l if 'omd' in i]"
    ]
   },
   {
@@ -482,7 +737,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +746,7 @@
        "['InvoiceDate']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +892,7 @@
        "4                   0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -666,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +1019,7 @@
        "4                        1  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -793,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +1114,7 @@
        "2  2014-08-01 11:00:00-05:00"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1013,6 +1268,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatetimeIndex(['2024-01-01', '2024-01-02', '2024-01-03', '2024-01-04',\n",
+       "               '2024-01-05', '2024-01-06', '2024-01-07', '2024-01-08',\n",
+       "               '2024-01-09', '2024-01-10',\n",
+       "               ...\n",
+       "               '2024-12-22', '2024-12-23', '2024-12-24', '2024-12-25',\n",
+       "               '2024-12-26', '2024-12-27', '2024-12-28', '2024-12-29',\n",
+       "               '2024-12-30', '2024-12-31'],\n",
+       "              dtype='datetime64[ns]', length=366, freq='D')"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# omd\n",
+    "\n",
+    "pd.date_range(\"2024-01-01\", periods=366, freq=\"d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -1021,9 +1305,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "fsml",
+   "display_name": "ml2023",
    "language": "python",
-   "name": "fsml"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1035,7 +1319,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.11.0"
   },
   "toc": {
    "base_numbering": 1,
